[package]
name = "newspaper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-cors = "*"
chrono = "*"
sqlx = { version = "*", features = [ "runtime-actix-rustls", "sqlite" ] }
juniper = "*"
async-std = "*"
serde_derive = "*"
serde_json = "*"
hex = "*"
argon2 = "*"
rand_core = { version = "0.6", features = [ "std" ] }
async-trait = "*"